<resources>
    <string name="app_name">Диктофон</string>
    <string name="new_record">Новая запись</string>
    <string name="audio_list_button">Все записи</string>
    <string name="settings_button">Настройки</string>
    <string name="start_record_button">Запись</string>
    <string name="stop_record_button">Стоп</string>
    <string name="play_button">Воспроизвести</string>
    <string name="remove_button">Удалить</string>
    <string name="date">Дата : </string>
    <string name="frequency">Частота дискретизации:</string>
    <string name="input_sound">Источник звука:</string>
    <string name="microphone">Microphone</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="low_frecuency">11025</string>
    <string name="medium_frequency">22050</string>
    <string name="high_frecuency">44100</string>
    <string name="check_bluetooth">Проверка Bluetooth</string>
    <string name="pause_record_button">Пауза</string>
    <string name="cancel">Отмена</string>
</resources>
