<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStart"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:onClick="clickStartBtn"
        android:text="@string/start_record_button"
        app:cornerRadius="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStop"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:onClick="clickStopRecordingBtn"
        android:text="@string/stop_record_button"
        app:cornerRadius="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBluetooth"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:onClick="clickActivateBluetoothBtn"
        android:text="@string/check_bluetooth"
        app:cornerRadius="16dp" />
</LinearLayout>